    Cross-references can now be created easily for non-HTML formatters.
* Bug fixes
  * `ri []` and other special methods now work properly.  Issue #52 by
    ddebernardy.
  * `ri` now has space between class comments from multiple files.
  * :stopdoc: no longer creates Object references.  Issue #55 by Simon Chiang
  * :nodoc: works on class aliases now.  Issue #51 by Steven G. Harms

=== 3.8 / 2011-06-29

* Minor enhancements
  * RDoc::Parser::C can now discover methods on ENV and ARGF.
  * RDoc::Parser::C now knows about rb_cSocket and rb_mDL.
* Bug fixes
  * Updating Object in an ri data store with new data now removes methods,
    includes, constants and aliases.

=== 3.7 / 2011-06-27

* Minor enhancements
  * New directive :category: which allows methods to be grouped into sections
    more cleanly.  See RDoc::Markup for details.
  * Document-class for RDoc::Parser::C now supports Foo::CONST as well as
    CONST.
  * ri method output is now a comma-separated list when displayed
    interactively.  Pull Request #39 by Benoit Daloze.
  * RDoc::ClassModule#merge now prefers the argument's information over the
    receiver's (it now behaves like Hash#merge! instead of a backwards
    Hash#merge!).
  * RDoc::Markup#convert now accepts an RDoc::Markup::Document instance
  * RDoc now owns the code for generating RDoc and ri data when gems install
  * Added RDoc::RDoc::reset
  * Added RDoc::CodeObject#file_name
* Bug fixes
  * ri no longer crashes when attempting to complete a plain [.
  * ri data now tracks which file information came from so it can process
    removals and changes to:
    * Classes and Modules
    * Methods
    * Attributes
    * Includes
    * Constants
    You will need to rebuild your ri data for it to update properly.  Issue
    #21 by Sven Riedel
  * Signal and SignalException no longer clobber each other
  * RDoc::Parser::C no longer creates classes when processing aliases.