@@ -15,6 +15,8 @@
   * `ri` now has space between class comments from multiple files.
   * :stopdoc: no longer creates Object references.  Issue #55 by Simon Chiang
   * :nodoc: works on class aliases now.  Issue #51 by Steven G. Harms
+  * Remove tokenizer restriction on header lengths for verbatim sections.
+    Issue #49 by trans
 
 === 3.8 / 2011-06-29
 
